Add event for fab click, and icon on homescreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
 
     <!-- Main View -->
     <string name="welcome_text">Welcome!</string>
+    <string name="snackbar_text">Snackbars will announce themselves"</string>
 
 </resources>
