--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,6 @@
     <!-- Main View -->
     <string name="welcome_text">Welcome!</string>
     <string name="snackbar_text">Snackbars will announce themselves"</string>
+    <string name="new_message">Write a message</string>
 
 </resources>
