--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <!-- Navigation menu -->
     <string name="menu_home">Home</string>
     <string name="menu_tabs">Tabs</string>
+    <string name="menu_rating_bar">Rating Bar</string>
 
     <!-- Main View -->
     <string name="welcome_text">Welcome!</string>
@@ -22,4 +23,9 @@
     <string name="tab_number">Tab %d</string>
     <string name="tab_centre_text">Now on Tab %d</string>
 
+    <!-- RatingBar View -->
+    <string name="rate_me">Please rate me!</string>
+    <string name="rating_content_description">%1$s out of %2$d stars</string>
+    <string name="rating_thanks">Thanks for rating %s stars!</string>
+    <string name="rate_again">Rate again</string>
 </resources>
