--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search_cross">Search 1</string>
+    <string name="action_search_tick">Search 2</string>
 
     <!-- Navigation menu -->
     <string name="menu_home">Home</string>
@@ -15,10 +17,11 @@
     <string name="menu_rating_bar">Rating Bar</string>
     <string name="menu_list_view">List View</string>
     <string name="menu_links">Links</string>
+    <string name="menu_search">Search</string>
 
     <!-- Main View -->
     <string name="welcome_text">Welcome!</string>
-    <string name="snackbar_text">Snackbars will announce themselves"</string>
+    <string name="toast_text">Toasts will announce themselves"</string>
     <string name="new_message">Write a message</string>
 
     <!-- Tabs View -->
@@ -33,4 +36,9 @@
 
     <!-- ListView View -->
     <string name="item">Item %d</string>
+
+    <!-- Search View -->
+    <string name="regular_text">Just some regular old text on a normal screen</string>
+    <string name="regular_button">Click me!</string>
+    <string name="search_result">Search result %d</string>
 </resources>
