--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,21 +8,22 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-    <string name="action_search_cross">Search 1</string>
-    <string name="action_search_tick">Search 2</string>
+    <string name="action_search_cross">Search with cross</string>
+    <string name="action_search_tick">Search with tick</string>
 
     <!-- Navigation menu -->
     <string name="menu_home">Home</string>
     <string name="menu_tabs">Tabs</string>
     <string name="menu_rating_bar">Rating Bar</string>
     <string name="menu_list_view">List View</string>
-    <string name="menu_links">Links</string>
     <string name="menu_search">Search</string>
+    <string name="menu_links">Links</string>
+    <string name="menu_text">Other text</string>
 
     <!-- Main View -->
     <string name="welcome_text">Welcome!</string>
     <string name="toast_text">Toasts will announce themselves"</string>
-    <string name="new_message">Write a message</string>
+    <string name="toast_content_description">Show a toast</string>
 
     <!-- Tabs View -->
     <string name="tab_number">Tab %d</string>
@@ -41,4 +42,11 @@
     <string name="regular_text">Just some regular old text on a normal screen</string>
     <string name="regular_button">Click me!</string>
     <string name="search_result">Search result %d</string>
+
+    <!-- Other Text View -->
+    <string name="tick_content_description">Marked correct</string>
+    <string name="timestamp_mins_ago">posted %dm ago</string>
+    <string name="timestamp_mins_ago_long">posted %d minutes ago</string>
+    <string name="timestamp_full">posted on %s</string>
+    <string name="add_button">Add</string>
 </resources>
